# gfaidx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ideas.md  main.cpp  setup.py  test_node_ids.txt  test_queries.txt
.github/workflows/: ci.yml
attic/python_legacy/: utilities.py
attic/scripts/: get_bfs.py  test_file_reading.cpp
attic/src/compressors/: chunked_gzip_old.cpp  vle_test.cpp
attic/src/indexer/: create_binary_hash.cpp
benchmark/: README.md  Snakefile  config.yaml  dag.dot  graphs.tsv  node_queries.tsv  region_queries.tsv
benchmark/scripts/: collect_results.py  graph_stats.py  json_value.py  measure.py  tool_versions.py
python/: README.md  setup.py
python/pygfaidx/: __init__.py  bfs.py  chgraph.py  cli_bfs.py  node_hash_index.py
python/pygfaidx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: bench_compare.py  bench_index_gfa.sh  build_lnx.py  check_pdx_path_loops.py  create_random_paths.py  filter_orphan_links.sh  generate_random_nodes.py  gfa_to_edge_list.cpp  gfa_to_metis.py  measure_tree_rss.py  pdx_size_breakdown.py  pdx_step_bitpack_estimate.py  plot_chunk_node_distribution.py  random_nodes_communities.py  random_nodes_communities.txt  random_queries.txt  test_file_reading.cpp  w_to_p.awk
src/: community.cpp  community.h  gfaidx.cpp  graph.cpp  graph.h  graph_binary.cpp  graph_binary.h  index_gfa.cpp  main_convert.cpp  read_random_community.cpp  split_gfa_to_comms.h  test_binary_hash  test_binary_hash.cpp
src/chunk/: chunk_reader.cpp  chunk_reader.h  get_chunk_command.cpp  get_chunk_command.h  get_subgraph_command.cpp  get_subgraph_command.h  recursive_chunking.cpp  recursive_chunking.h  split_gfa_to_comms.cpp  split_gfa_to_comms.h  text_handle_cache.cpp  text_handle_cache.h
src/compressors/: chunked_gzip_new.cpp  compressors.cpp  compressors.h  rle_test.cpp  vle_test  vle_test.cpp
src/coordinates/: coordinate_commands.cpp  coordinate_commands.h  coordinate_index.cpp  coordinate_index.h  path_coordinate_query.cpp  path_coordinate_query.h  path_haplotype_query.cpp  path_haplotype_query.h
src/fs/: Reader.cpp  Reader.h  fs_helpers.cpp  fs_helpers.h  gfa_line_parsers.cpp  gfa_line_parsers.h  test_reader.cpp
src/indexer/: community_coarsening.cpp  community_coarsening.h  community_refinement.cpp  community_refinement.h  direct_binary_writer.cpp  direct_binary_writer.h  index_gfa_helpers.cpp  index_gfa_helpers.h  index_gfa_main.cpp  index_gfa_main.h  node_hash_index.cpp  node_hash_index.h  node_length_index.cpp  node_length_index.h
src/paths/: get_path_command.cpp  get_path_command.h  index_path_checkpoints_command.cpp  index_path_checkpoints_command.h  index_paths_command.cpp  index_paths_command.h  path_coordinate_checkpoints.cpp  path_coordinate_checkpoints.h  path_index.cpp  path_index.h  walk_coords.cpp  walk_coords.h
src/utils/: Memory.cpp  Memory.h  Timer.h  arg_utils.cpp  cli_helpers.cpp  cli_helpers.h  debug_trace.h
tests/: test_all_haplotype_repeated_anchors.sh
tests/data/: repeated_anchor_coordinate_paths.tsv  repeated_anchor_paths.gfa
